# ubus_voip

./: CMakeLists.txt  Makefile  README  README.md  common.mk  fv_state_machine.c  rules.mk  ubus_evoip.c  ubus_voip.c
files/: cmd_list  cmd_list.sh  evoip.config  evoip.config.all  evoip_uci.config  fvt_evoip.config  fvt_evoip.init  rtp_port_base.sh  ubus_evoip.init  ubus_evoip_cmd_list
include/rpcd/: uci.h
omci_intel/: makefile.inc  makefile.inc.prx120  makefile.inc.prx126  makefile.inc.prx321  makefile.inc.trex  makefile.inc.x86  makefile.omci.inc  revision_gen.sh
omci_intel/acl/: Makefile  README  acl.c  acl.h  vacl.c  vacl.h  vacl_diag_str.h  vacl_readme.txt  vacl_util.c  vacl_util.h  vaclrg_readme.org  vacltest.c  vacltest_util.c  vacltest_util.h
omci_intel/batchtab/: Makefile  batchtab.c  batchtab.h  batchtab_cb.c  batchtab_cb.h  batchtab_cb_autouni.c  batchtab_cb_autoveip.c  batchtab_cb_classf.c  batchtab_cb_filtering.c  batchtab_cb_gemflow.c  batchtab_cb_hardbridge.c  batchtab_cb_isolation.c  batchtab_cb_linkready.c  batchtab_cb_lldp.c  batchtab_cb_mac_filter.c  batchtab_cb_mcastbw.c  batchtab_cb_mcastconf.c  batchtab_cb_mcastmode.c  batchtab_cb_pots_mkey.c  batchtab_cb_tagging.c  batchtab_cb_td.c  batchtab_cb_tm.c  batchtab_cb_wan.c  batchtab_cb_wand2p.c  batchtab_cb_wanif.c
omci_intel/cfm/: Makefile  cfm_bport.c  cfm_bport.h  cfm_core.c  cfm_core.h  cfm_mp.c  cfm_mp.h  cfm_pkt.c  cfm_pkt.h  cfm_print.c  cfm_print.h  cfm_recv.c  cfm_recv.h  (+6 more)
ubus_voip/: Makefile  package.mk  rules.mk  ubus_demo.c  ubus_voip.c
ubus_voip/src/: CMakeLists.txt  ubus_voip.c
(+1303 files in other folders)
